--- a/AboutMeWebPage/AboutMe.html
+++ b/AboutMeWebPage/AboutMe.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>HW4</title> 
-		<link rel="stylesheet" href="hw4.css?rev=10">
+		<title>About Me</title> 
+		<link rel="stylesheet" href="aboutme.css?rev=10">
 	</head>
 
 		<body>
